<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/registro_home"
    tools:context=".MainActivity">

    <TextView
        android:id="@+id/text_titule"
        android:layout_width="297dp"
        android:layout_height="wrap_content"
        android:text="@string/text_titulo"
        android:gravity="center"
        android:textSize="20sp"
        android:layout_marginTop="20dp"
        android:textStyle="bold"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        />

    <TextView
        android:id="@+id/text_subtitle"
        android:layout_width="297dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="15dp"
        android:text="@string/text_subtitulo"
        android:gravity="center"
        android:textSize="15sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/text_titule"
        />

    <EditText
        android:id="@+id/name_input"
        android:layout_width="297dp"
        android:layout_height="33dp"
        android:layout_marginTop="12dp"
        android:background="@drawable/registro_inputs"
        android:hint="@string/nombre_input"
        android:inputType="text"
        android:textSize="14sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/text_subtitle" />

    <EditText
        android:id="@+id/last_name_input"
        android:layout_width="297dp"
        android:layout_height="33dp"
        android:layout_marginTop="10sp"
        android:hint="@string/Apellido_input"
        android:inputType="text"
        android:background="@drawable/registro_inputs"
        android:textSize="14sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/name_input"
        />

    <TextView
        android:id="@+id/type_document_textView"
        android:layout_width="203dp"
        android:layout_height="35dp"
        android:layout_marginTop="4dp"
        android:gravity="center_vertical"
        android:paddingLeft="0sp"
        android:text="@string/Tipo_documento_textView"
        android:textSize="15sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.738"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/last_name_input" />

    <Button
        android:id="@+id/type_document_button"
        android:layout_width="82dp"
        android:layout_height="38dp"
        android:background="@drawable/registro_button"
        android:text="@string/typo_documento_button"
        android:textAllCaps="false"
        android:textColor="@color/white"
        android:textSize="14sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.014"
        app:layout_constraintStart_toStartOf="@+id/last_name_input"
        app:layout_constraintTop_toTopOf="@+id/type_document_textView" />

    <EditText
        android:id="@+id/document_input"
        android:layout_width="297dp"
        android:layout_height="33dp"
        android:layout_marginTop="4dp"
        android:background="@drawable/registro_inputs"
        android:hint="@string/numero_doc_input"
        android:inputType="number"
        android:textSize="14sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.535"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/type_document_button" />

    <TextView
        android:id="@+id/birth_date_textView"
        android:layout_width="163dp"
        android:layout_height="35dp"
        android:layout_marginTop="4dp"
        android:gravity="center_vertical"
        android:paddingLeft="0sp"
        android:text="@string/Fecha_nacimiento_textView"
        android:textSize="15sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.245"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/document_input" />

    <Button
        android:id="@+id/birth_date_button"
        android:layout_width="123dp"
        android:layout_height="38dp"
        android:layout_marginTop="4dp"
        android:background="@drawable/registro_button"
        android:text="@string/fecha_button"
        android:textAllCaps="false"
        android:textColor="@color/white"
        android:textSize="14sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.731"
        app:layout_constraintStart_toStartOf="@+id/birth_date_textView"
        app:layout_constraintTop_toBottomOf="@+id/document_input" />

    <TextView
        android:id="@+id/hobbies_textView"
        android:layout_width="297dp"
        android:layout_height="33dp"
        android:layout_marginTop="4dp"
        android:gravity="center_vertical"
        android:paddingLeft="0sp"
        android:text="@string/hobbies_textView"
        android:textSize="15sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.526"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/birth_date_button" />

    <Button
        android:id="@+id/hobbies_button"
        android:layout_width="297dp"
        android:layout_height="38dp"
        android:layout_marginTop="4dp"
        android:background="@drawable/registro_button"
        android:text="@string/hobbies_button"
        android:textAllCaps="false"
        android:textColor="@color/white"
        android:textSize="14sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="@+id/hobbies_textView"
        app:layout_constraintTop_toBottomOf="@+id/hobbies_textView" />

    <TextView
        android:id="@+id/hobbies_text_choice"
        android:layout_width="297dp"
        android:layout_height="33dp"
        android:layout_marginTop="4dp"
        android:textColor="@color/black_light"
        android:textSize="11sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.526"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/hobbies_button" />

    <EditText
        android:id="@+id/password_input"
        android:layout_width="297dp"
        android:layout_height="33dp"
        android:layout_marginTop="8dp"
        android:background="@drawable/registro_inputs"
        android:hint="@string/pass_input"
        android:inputType="textPassword"
        android:textSize="14sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.535"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/hobbies_text_choice" />

    <EditText
        android:id="@+id/confirm_password_input"
        android:layout_width="297dp"
        android:layout_height="33dp"
        android:layout_marginTop="4dp"
        android:background="@drawable/registro_inputs"
        android:hint="@string/confirm_pass_input"
        android:inputType="textPassword"
        android:textSize="14sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.535"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/password_input" />

    <Button
        android:id="@+id/reset_button"
        android:layout_width="131dp"
        android:layout_height="47dp"
        android:background="@drawable/registro_reset_botton"
        android:text="@string/reset_button"
        android:textAllCaps="false"
        android:textColor="@color/white"
        android:textSize="15sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.807"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/confirm_password_input"
        app:layout_constraintVertical_bias="0.16" />

    <Button
        android:id="@+id/register_button"
        android:layout_width="131dp"
        android:layout_height="47dp"
        android:background="@drawable/registro_r_button"
        android:text="@string/registro_button"
        android:textAllCaps="false"
        android:textColor="@color/white"
        android:textSize="15sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.202"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/confirm_password_input"
        app:layout_constraintVertical_bias="0.163" />

</androidx.constraintlayout.widget.ConstraintLayout>