<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/registro_home"
    tools:context=".MainActivity">

    <TextView
        android:id="@+id/home_title"
        android:layout_width="match_parent"
        android:layout_height="30dp"
        android:text="@string/home_title"
        android:textStyle="bold"
        android:textSize="20sp"
        android:layout_marginLeft="20dp"
        android:layout_marginRight="20dp"
        android:layout_marginTop="20dp"
        app:layout_constraintTop_toTopOf="parent"
        />

    <TextView
        android:id="@+id/home_subtitle"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:textSize="16sp"
        android:text="@string/home_subtitulo"
        android:layout_marginTop="5dp"
        android:layout_marginLeft="20dp"
        android:layout_marginRight="20dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/home_title"
        />

    <RelativeLayout
        android:id="@+id/home_container"
        android:layout_width="match_parent"
        android:layout_height="400dp"
        android:layout_margin="20dp"
        android:background="#BAECF3"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/home_subtitle"
        />

    <Button
        android:id="@+id/home_button_user"
        android:layout_width="171dp"
        android:layout_height="39dp"
        android:layout_marginStart="16dp"
        android:layout_marginTop="15dp"
        android:background="@drawable/registro_button"
        android:text="@string/home_button_usuario"
        android:textAllCaps="false"
        android:textColor="@color/white"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/home_container"
        app:layout_constraintVertical_bias="0.07" />

    <Button
        android:id="@+id/home_button_hobbies"
        android:layout_width="171dp"
        android:layout_height="39dp"
        android:layout_marginTop="15dp"
        android:layout_marginEnd="20dp"
        android:background="@drawable/registro_button"
        android:text="@string/home_button_hobbies"
        android:textAllCaps="false"
        android:textColor="@color/white"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/home_container"
        app:layout_constraintVertical_bias="0.07" />

    <Button
        android:id="@+id/home_button_logout"
        android:layout_width="171dp"
        android:layout_height="39dp"
        android:layout_margin="10dp"
        android:background="@drawable/registro_reset_botton"
        android:text="@string/home_button_logout"
        android:textAllCaps="false"
        android:textColor="@color/white"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="@+id/home_button_hobbies"
        app:layout_constraintHorizontal_bias="0.461"
        app:layout_constraintStart_toStartOf="@+id/home_button_user"
        app:layout_constraintTop_toBottomOf="@+id/home_button_hobbies"
        app:layout_constraintVertical_bias="0.0" />

</androidx.constraintlayout.widget.ConstraintLayout>