<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    tools:context=".UsuarioFragmento"
    android:background="@drawable/fragmento_usuario">

    <TextView
        android:id="@+id/hobbies_h_title"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:text="@string/frag_hobbies_titulo"
        android:textStyle="bold"
        android:layout_marginTop="10dp"
        android:textSize="16sp"
        app:layout_constraintTop_toTopOf="parent"
        />

    <TextView
        android:id="@+id/hobbies_h_label"
        android:layout_width="100dp"
        android:layout_height="wrap_content"
        android:text="@string/frag_hobbies_subtitulo"
        android:layout_marginStart="20dp"
        android:layout_marginTop="20dp"
        android:textSize="14sp"
        android:textAllCaps="false"
        android:textStyle="bold"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/hobbies_h_title"
        />

    <TextView
        android:id="@+id/hobbies_h_value"
        android:layout_width="240dp"
        android:layout_height="wrap_content"
        android:layout_marginEnd="20dp"
        android:layout_marginTop="20dp"
        android:textSize="14sp"
        android:textAllCaps="false"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/hobbies_h_title"
        />

    <Button
        android:id="@+id/hobbies_h_button"
        android:layout_width="160dp"
        android:layout_height="40dp"
        android:layout_marginTop="30dp"
        android:layout_marginBottom="72dp"
        android:background="@drawable/registro_button"
        android:text="@string/frag_hobbies_button"
        android:textAllCaps="false"
        android:textColor="@color/white"
        android:textSize="14sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.498"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/hobbies_h_label" />

</androidx.constraintlayout.widget.ConstraintLayout>